<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/new_list"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_camp"
                android:textColor="@color/red"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/edit_text"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:onClick="confirm"
        android:padding="20dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

</LinearLayout>