<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/new_product"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_camp"
                    android:textColor="@color/red"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_camp"
                    android:textColor="@color/red"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/description_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="date"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_camp"
                    android:textColor="@color/red"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edit_text"
                        android:gravity="start"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:onClick="cancelDate"
                        android:src="@drawable/cancel" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="time"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_camp"
                    android:textColor="@color/red"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edit_text"
                        android:gravity="start"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:onClick="cancelTime"
                        android:src="@drawable/cancel" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:checked="false"
                    android:text="@string/urgent_camp"
                    android:textColor="#d14343"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/repeat_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000000"
                    android:checked="false"
                    android:text="@string/repeat_camp"
                    android:textColor="#d14343"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/repeat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_time_camp"
                        android:textColor="#d14343"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/repeat_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/repeat_time_hint"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textIsSelectable="false"
                        android:textSize="15sp" />

                    <RadioGroup
                        android:id="@+id/repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/dark"
                            android:checked="false"
                            android:text="@string/days_radio"
                            android:textSize="12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/dark"
                            android:checked="false"
                            android:text="@string/weeks_radio"
                            android:textSize="12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/dark"
                            android:checked="false"
                            android:text="@string/months_radio"
                            android:textSize="12sp" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/dark"
                            android:checked="false"
                            android:text="@string/years_radio"
                            android:textSize="12sp" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:onClick="confirm"
        android:padding="20dp"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

</LinearLayout>